# simple_client_server

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  packet.cpp  packet.hpp
cmake/: include_cmn_libs.cmake
common/: message.hpp  utilities.cpp  utilities.hpp
server/: CMakeLists.txt  main.cpp  packet.cpp  packet.hpp  server.cpp  server.hpp  session.cpp  session.hpp
